# ProjetBachelor

./: README.md
project_in424_description/: CMakeLists.txt  package.xml
project_in424_description/config/: ipsa_1.yaml  ipsa_2.yaml
project_in424_description/launch/: simu.launch
project_in424_description/models/L_box/: model.sdf
project_in424_description/models/U_box/: model.sdf
project_in424_description/models/basic_box/: model.sdf
project_in424_description/urdf/: robot.gazebo  robot.xacro
project_in424_description/worlds/: ipsa_1.world  ipsa_2.world
project_in424_navigation/: CMakeLists.txt  package.xml
project_in424_navigation/launch/: agent.launch
project_in424_navigation/scripts/: my_agent.py
project_in424_navigation/scripts/soumissions/: briac_lhuissier.py
project_in424_navigation/scripts/soumissions/SET/: set1_10.py  set1_11.py  set1_12.py  set1_13.py  set1_9.py  set2_10.py  set2_11.py  set2_11_A_star.py  set2_12.py  set2_13.py  set2_14.py  set2_9.py
project_in424_navigation/scripts/soumissions/SM/: sma_5.py  sma_6.py  sma_7.py  smb_1.py  smb_2.py  smb_3.py  smb_4.py  smc_5.py  smc_6.py  smc_7.py  smc_8.py  smd_1.py  smd_2.py  smd_3.py
