<?xml version="1.0"?>
<package format="2">
  <name>project_in424_description</name>
  <version>0.0.0</version>
  <description>This packages describes the simulated robot and the environment used during this project</description>
  <maintainer email="johvany.gustave@ipsa.fr">Johvany Gustave</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models" />
  </export>
</package>
