<?xml version="1.0"?>
<package format="2">
  <name>project_in424_navigation</name>
  <version>0.0.0</version>
  <description>This package allows the user to implement a node that sends the adequate velocity commands to a simulated robot 
    so that it reaches a goal while avoiding the potential obstacles in an unknown environment</description>
  <maintainer email="johvany.gustave@ipsa.fr">Johvany Gustave</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
